--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@
 }
 
 h2 {
-    font-family:'Big Shoulders Display', sans-serif;
+    font-family: 'Big Shoulders Display', sans-serif;
+}
+
+p {
+    font-family: 'Lexend Deca', sans-serif;
+}
+
+a {
     font-family: 'Lexend Deca', sans-serif;
 }
