--- a/style.css
+++ b/style.css
@@ -12,14 +12,61 @@
     --transparent-white: rgba(255, 255, 255, 0.75);
 }
 
+body {
+    padding: 5.5rem 1.5rem;
+}
+
 h2 {
     font-family: 'Big Shoulders Display', sans-serif;
+    text-transform: uppercase;
+    font-size: 2.5rem;
+    color: var(--gray);
+    margin-block: 1.875rem;
 }
 
 p {
     font-family: 'Lexend Deca', sans-serif;
+    font-size: 0.9375rem;
+    color: var(--transparent-white);
+    margin-bottom: 1.875rem;
 }
 
 a {
     font-family: 'Lexend Deca', sans-serif;
+    display:block;
+    text-decoration: none;
+    border: 2px solid var(--gray);
+    width: fit-content;
+    font-size: 0.9375rem;
+    padding: 0.75rem 2.5rem;
+    border-radius: 1.5625rem;
+    background: var(--gray);
+}
+
+section {
+    padding: 3rem;
+}
+
+.sedans {
+    background: var(--orange);
+}
+
+.sedans {
+    background: var(--orange);
+}
+
+.suvs {
+    background: var(--cyan);
+}
+
+.luxuosos {
+    background: var(--dark-cyan);
+}
+
+.sedans a {
+    color: var(--cyan);
+}
+
+.luxuosos a {
+    color: var(--dark-cyan);
 }
